@@ -87,6 +87,7 @@ LIBRPMDB_0
     rpmCheckPassPhrase;
     rpmDatabasePoptTable;
     _rpmdbPool;
+    _rpmmiPool;
     rpmdbAdd;
     rpmdbAppendIterator;
     rpmDBArgs;
