@@ -1,4 +1,5 @@
 5.1.7 -> 5.1.8:
+    - jbj: yarn: stub-in rpmmi pool handling under NOTYET.
     - jbj: QNX: avoid conflicting db defines for __mutex_lock/__mutex_unlock.
     - jbj: yarn: convert rpmdb refcount to usage mutex.
     - jbj: yarn: convert psm refcount to usage mutex.
